--- a/package.json
+++ b/package.json
@@ -2,16 +2,6 @@
   "name": "urlshortener",
   "version": "1.0.1",
   "description": "Rocket.Chat App to shorten urls (with customization options)",
-  "main": "UrlShortenerApp.ts",
-  "dependencies": {
-    "@rocket.chat/apps-engine": "^1.19.0",
-    "@types/node": "14.14.6",
-    "tslint": "^5.10.0",
-    "typescript": "^4.0.5"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "Rocket.Chat",
     "Rocket.Chat.Apps-engine",
@@ -20,7 +10,21 @@
   ],
   "author": "aditya-mitra",
   "license": "MIT",
+  "main": "UrlShortenerApp.ts",
+  "scripts": {
+    "lint": "eslint . --ext .ts,.js",
+    "lintf": "npm run lint -- --fix",
+    "build": "rc-apps package",
+    "deploy": "rc-apps deploy --url http://localhost:3000"
+  },
+  "dependencies": {
+    "@rocket.chat/apps-engine": "^1.19.0",
+    "@types/node": "14.14.6",
+    "tslint": "^5.10.0",
+    "typescript": "^4.0.5"
+  },
   "devDependencies": {
+    "@rocket.chat/apps-cli": "^1.9.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
