--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "no-useless-constructor": 0
+        "no-console": 2,
+        "no-useless-constructor": 0, // checking
+        "class-methods-use-this": 0 // some class methods cannot be static
     }
 }
