--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "id": "0680e6a5-0826-4a58-a56b-73bb47de5199",
-    "version": "0.0.1",
-    "requiredApiVersion": "^1.4.0",
+    "version": "1.0.1",
+    "requiredApiVersion": "^1.19.0",
     "iconFile": "icon.png",
     "author": {
         "name": "aditya-mitra",
@@ -11,5 +11,6 @@
     "name": "urlshortener",
     "nameSlug": "urlshortener",
     "classFile": "UrlShortenerApp.ts",
-    "description": "Rocket.Chat App to shorten urls (with customization options)"
+    "description": "Rocket.Chat App to shorten urls (with customization options)",
+    "implements": []
 }
