improve the workflows

--- a/.github/workflows/lint_build.yml
+++ b/.github/workflows/lint_build.yml
@@ -1,8 +1,11 @@
 name: Lint and Build
 
 on:
-  - pull_request
-  - push
+  push:
+    branches:
+      - main
+
+  pull_request:
 
 jobs:
   install:
