--- a/.github/workflows/todos.yml
+++ b/.github/workflows/todos.yml
@@ -1,10 +1,15 @@
 name: Todos
+
 on: push
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
       - name: Add/Remove Todos
         uses: ribtoks/tdg-github-action@master
         with:
