--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     },
     "rules": {
         "no-console": 2,
+        "no-shadow": 0, // TODO: no-shadow usage (need to research)
         "class-methods-use-this": 0, // some class methods cannot be static
         "import/no-extraneous-dependencies": 0, // the main dependencies are listed under devDependecies and not dependencies inside package.json
         "import/extensions": 0 // not required to include file extensions in imports
