--- a/.rcappsconfig
+++ b/.rcappsconfig
@@ -4,9 +4,9 @@
     "password": "kame",
     "ignoredFiles": [
         "**/README.md",
+        "**/LICENSE",
         "**/package-lock.json",
         "**/package.json",
-        "**/tslint.json",
         "**/tsconfig.json",
         "**/*.js",
         "**/*.js.map",
@@ -14,6 +14,9 @@
         "**/*.spec.ts",
         "**/*.test.ts",
         "**/dist/**",
-        "**/.*"
+        "**/.*",
+        "**/.eslintrc.json",
+        ".github/**",
+        "docs/**"
     ]
 }
